data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000123_65c4e48f-4f8d-447b-a5b4-f2509f68a2f7.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: 65c4e48f-4f8d-447b-a5b4-f2509f68a2f7
- repo: django/django
- instance_id: django__django-14915
- base_commit: 903aaa35e5ceaa33bfc9b19b7f6da65ce5a91dd4
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
ModelChoiceIteratorValue is not hashable.
Description

Recently I migrated from Django 3.0 to Django 3.1. In my code, I add custom data-* attributes to the select widget options. After the upgrade some of those options broke. Error is {TypeError}unhashable type: 'ModelChoiceIteratorValue'.
Example (this one breaks):
    def create_option(self, name, value, label, selected, index, subindex=None, attrs=None):
        context = super().create_option(name, value, label, selected, index, subindex, attrs)
        if not value:
            return context
        if value in self.show_fields: # This is a dict {1: ['first_name', 'last_name']}
            context['attrs']['data-fields'] = json.dumps(self.show_fields[value])
However, working with arrays is not an issue:
    def create_option(self, name, value, label, selected, index, subindex=None, attrs=None):
        context = super().create_option(name, value, label, selected, index, subindex, attrs)
        if not value:
            return context
        if value in allowed_values: # This is an array [1, 2]
            ...

FILES INSPECTED
---------------
- django/forms/models.py [Read: 1]

SEARCH ANCHORS
--------------
- [1] Grep pattern='class ModelChoiceIteratorValue' path='testbed'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [test] cd testbed && python test_hashable_fix.py
- [other/reproduction] cd testbed && python --version
- [other/reproduction] cd testbed && python3 --version
- [other/reproduction] python3 --version
- [test] python3 ./swebench_9_15/testbed/test_hashable_fix.py
- [other/reproduction] rm ./swebench_9_15/testbed/test_hashable_fix.py

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Grep Result after action #1]
  testbed/django/forms/models.py:1161:class ModelChoiceIteratorValue:
- [Read Result after action #3]
    1150→            orig = getattr(self.parent_instance, self.to_field)
    1151→        else:
    1152→            orig = self.parent_instance.pk
    1153→        if str(value) != str(orig):
    1154→            raise ValidationError(self.error_messages['invalid_choice'], code='invalid_choice')
    1155→        return self.parent_instance
    1156→
    1157→    def has_changed(self, initial, data):
    1158→        return False
    1159→
    1160→
    1161→class ModelChoiceIteratorValue:
    1162→    def __init__(self, value, instance):
    1163→        self.value = value
    1164→        self.instance = instance
    1165→
    1166→    def __str__(self):
    1167→        return str(self.value)
    1168→
    1169→    def __eq__(self, other):
    1170→        if isinstance(other, ModelChoiceIteratorValue):
    1171→            other = other.value
    1172→        return self.value == other
    1173→
    1174→
    1175→class ModelChoiceIterator:
    1176→    def __init__(self, field):
    1177→        self.field = field
    1178→        self.queryset = field.queryset
    1179→
    1180→    def __iter__(self):
    1181→        if self.field.empty_label is not None:
    1182→            yield ("", self.field.empty_label)
    1183→        queryset = se
  [... truncated ...]
- [Test Output after action #7]
  Exit code 1
    File "test_hashable_fix.py", line 27
      print(f"  hash(value1) = {h1}")
                                   ^
  SyntaxError: invalid syntax
- [Test Output after action #14]
  Testing hash()...
    hash(value1) = 1
    hash(value2) = 2
    hash(value3) = 1
    ✓ hash() works

  Testing equal values have equal hashes...
    ✓ Equal values have equal hashes

  Testing dictionary key usage...
    Created dict: {<django.forms.models.ModelChoiceIteratorValue object at 0x7fd6f8112e20>: 'first', <django.forms.models.ModelChoiceIteratorValue object at 0x7fd6f8112b80>: 'second'}
    value1 in test_dict: True
    value2 in test_dict: True
    value3 in test_dict: True
    ✓ Dictionary key usage works

  Testing original use case...
    value1 found in show_fields: ['first_name', 'last_name']
    value2 found in show_fields: ['email']
    ✓ Original use case works

  Testing set usage...
    Set length: 2 (should be 2, not 3)
    ✓ Set usage works

  ✅ All tests passed!
  Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

    Traceback (most recent call last):
      File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
        exec(line)
      File "<string>", line 1, in <module>
      File "<frozen importlib._bootstrap>", line 553, in module_from_spec
    AttributeError: 'NoneType' object has no attribute 'loader'

  Remainder of file ignored

SOURCE EDIT EVIDENCE
--------------------
- django/forms/models.py
  Tool: Edit action #5
  old_text_sha256: d7d9d58ecbb91b48d8eaf76eb16958872f5033f70a41ca34bb70865210779a8e
  new_text_sha256: 9576fdb4f47d62a7cccb8c15cbfe38e9e455728f28d9c055f197725b0de653f0
- test_hashable_fix.py
  Tool: Write action #6
  new_text_sha256: 752dc35c0b2fe33f790818ef441e560a84c67e54c79f92128df0a26e4d6d315a

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
